--- a/project-euler.org
+++ b/project-euler.org
@@ -1,4 +1,15 @@
-* [[https://projecteuler.net/problem%3D1][Problem 1: Multiples of 3 and 5]]
+#+TITLE: Project Euler
+#+AUTHOR: Lars Tveito
+#+OPTIONS: toc:2 num:nil H:4 tex:imagemagick
+#+HTML_HEAD: <meta name="viewport" content="width=device-width, initial-scale=1"/>
+#+HTML_HEAD: <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/style.css" />
+#+HTML_HEAD: <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="js/jquery.tocify.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="js/bootstrap.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="js/org-bootstrap.js"></script>
+
 * Introduction
 
   This site contains all problems from [[https://projecteuler.net/][Project Euler]] at 20. April 2015. It
