--- a/project-euler.org
+++ b/project-euler.org
@@ -162,13 +162,34 @@
    : "Elapsed time: 258.019276 msecs"
    : 906609
 
-(1 + 2 + ... + 10)^{2} = 55^{2} = 3025
+* [[https://projecteuler.net/problem%3D5][Problem 5: Smallest multiple]]
 
-Hence the difference between the sum of the squares of the first ten
-natural numbers and the square of the sum is 3025 − 385 = 2640.
 
-Find the difference between the sum of the squares of the first one
-hundred natural numbers and the square of the sum.
+  2520 is the smallest number that can be divided by each of the numbers
+  from 1 to 10 without any remainder.
+
+  What is the smallest positive number that is evenly divisible by all of
+  the numbers from 1 to 20?
+
+** Solution
+
+   A brute-force solution is to check divisibility from 1 to 20 for all
+   natural numbers until we find one that has this property.
+
+   #+BEGIN_SRC clojure :exports source
+   (let [all (range 1 21)]
+     (time (->> (iterate inc 1)
+                (filter (fn [n] (every? #(zero? (mod n %)) all)))
+                (first))))
+   #+END_SRC
+
+   But, as we can see, this is not really a good solution (it took almost
+   two minutes).
+
+   #+BEGIN_EXAMPLE
+   "Elapsed time: 90901.989396 msecs"
+   232792560
+   #+END_EXAMPLE
 
 * COMMENT [[https://projecteuler.net/problem%3D7][Problem 7: 10001st prime]]
 
