--- a/project-euler.org
+++ b/project-euler.org
@@ -1517,7 +1517,7 @@ can be written in the form:
 
 1
 
- 
+
 a_{1} +
 
 #+BEGIN_HTML
@@ -1526,8 +1526,8 @@ a_{1} +
 
 1
 
- 
- 
+
+
 a_{2} +
 
 #+BEGIN_HTML
@@ -1536,9 +1536,9 @@ a_{2} +
 
 1
 
- 
- 
- 
+
+
+
 a_{3} + ...
 
 For example, let us consider √23:
@@ -1547,7 +1547,7 @@ For example, let us consider √23:
   <div style="margin-left:20px;">
 #+END_HTML
 
-√23 = 4 + √23 --- 4 = 4 + 
+√23 = 4 + √23 --- 4 = 4 +
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1555,7 +1555,7 @@ For example, let us consider √23:
 
 1
 
- = 4 + 
+ = 4 +
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1563,7 +1563,7 @@ For example, let us consider √23:
 
 1
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1572,8 +1572,8 @@ For example, let us consider √23:
 1\\
 √23---4
 
- 
-1 + 
+
+1 +
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1596,7 +1596,7 @@ If we continue we would get the following expansion:
 
 1
 
- 
+
 1 +
 
 #+BEGIN_HTML
@@ -1605,8 +1605,8 @@ If we continue we would get the following expansion:
 
 1
 
- 
- 
+
+
 3 +
 
 #+BEGIN_HTML
@@ -1615,9 +1615,9 @@ If we continue we would get the following expansion:
 
 1
 
- 
- 
- 
+
+
+
 1 +
 
 #+BEGIN_HTML
@@ -1626,10 +1626,10 @@ If we continue we would get the following expansion:
 
 1
 
- 
- 
- 
- 
+
+
+
+
 8 + ...
 
 The process can be summarised as follows:
@@ -1758,7 +1758,7 @@ The square root of 2 can be written as an infinite continued fraction.
 
 1
 
- 
+
 2 +
 
 #+BEGIN_HTML
@@ -1767,8 +1767,8 @@ The square root of 2 can be written as an infinite continued fraction.
 
 1
 
- 
- 
+
+
 2 +
 
 #+BEGIN_HTML
@@ -1777,9 +1777,9 @@ The square root of 2 can be written as an infinite continued fraction.
 
 1
 
- 
- 
- 
+
+
+
 2 +
 
 #+BEGIN_HTML
@@ -1788,10 +1788,10 @@ The square root of 2 can be written as an infinite continued fraction.
 
 1
 
- 
- 
- 
- 
+
+
+
+
 2 + ...
 
 The infinite continued fraction can be written, √2 = [1;(2)], (2)
@@ -1834,7 +1834,7 @@ consider the convergents for √2.
 1
 
 = 7/5
- 
+
 2 +
 
 #+BEGIN_HTML
@@ -1843,8 +1843,8 @@ consider the convergents for √2.
 
 1
 
- 
- 
+
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1852,7 +1852,7 @@ consider the convergents for √2.
 
 2
 
- 
+
 1 +
 
 #+BEGIN_HTML
@@ -1862,7 +1862,7 @@ consider the convergents for √2.
 1
 
 = 17/12
- 
+
 2 +
 
 #+BEGIN_HTML
@@ -1871,9 +1871,9 @@ consider the convergents for √2.
 
 1
 
- 
- 
- 
+
+
+
 2 +
 
 #+BEGIN_HTML
@@ -1882,10 +1882,10 @@ consider the convergents for √2.
 
 1
 
- 
- 
- 
- 
+
+
+
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1893,7 +1893,7 @@ consider the convergents for √2.
 
 2
 
- 
+
 1 +
 
 #+BEGIN_HTML
@@ -1903,7 +1903,7 @@ consider the convergents for √2.
 1
 
 = 41/29
- 
+
 2 +
 
 #+BEGIN_HTML
@@ -1912,8 +1912,8 @@ consider the convergents for √2.
 
 1
 
- 
- 
+
+
 2 +
 
 #+BEGIN_HTML
@@ -1922,10 +1922,10 @@ consider the convergents for √2.
 
 1
 
- 
- 
- 
- 
+
+
+
+
 2 +
 
 #+BEGIN_HTML
@@ -1934,11 +1934,11 @@ consider the convergents for √2.
 
 1
 
- 
- 
- 
- 
- 
+
+
+
+
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -1946,7 +1946,7 @@ consider the convergents for √2.
 
 2
 
- 
+
 
 Hence the sequence of the first ten convergents for √2 are:
 
@@ -2398,31 +2398,31 @@ B2
 B3
 JAIL
 H2
- 
+
 C1
 T2
- 
+
 U1
 H1
- 
+
 C2
 CH3
- 
+
 C3
 R4
- 
+
 R2
 G3
- 
+
 D1
 CC3
- 
+
 CC2
 G2
- 
+
 D2
 G1
- 
+
 D3
 G2J
 F3
@@ -3607,7 +3607,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 *Unsorted*
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3664,7 +3664,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 1
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3696,7 +3696,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 2
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3728,7 +3728,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 3
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3760,7 +3760,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 2
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3792,7 +3792,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 5
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3824,7 +3824,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 6
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3856,7 +3856,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 7
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3888,7 +3888,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 2
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3920,7 +3920,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 3
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -3952,7 +3952,7 @@ and sorting on /n/ if the radical values are equal, we get:
 
 10
 
- 
+
 
 #+BEGIN_HTML
   <div style="text-align:center;">
@@ -4485,75 +4485,75 @@ grids?
 We can easily verify that none of the entries in the first seven rows of
 Pascal's triangle are divisible by 7:
 
- 
- 
- 
- 
- 
- 
+
+
+
+
+
+
  1
- 
- 
- 
- 
- 
+
+
+
+
+
  1
- 
+
  1
- 
- 
- 
- 
+
+
+
+
  1
- 
+
  2
- 
+
  1
- 
- 
- 
+
+
+
  1
- 
+
  3
- 
+
  3
- 
+
  1
- 
- 
+
+
  1
- 
+
  4
- 
+
  6
- 
+
  4
- 
+
  1
- 
+
  1
- 
+
  5
- 
+
 10
- 
+
 10
- 
+
  5
- 
+
  1
 1
- 
+
  6
- 
+
 15
- 
+
 20
- 
+
 15
- 
+
  6
- 
+
  1
 However, if we check the first one hundred rows, we will find that only
 2361 of the 5050 entries are /not/ divisible by 7.
@@ -7747,8 +7747,7 @@ For example A(1, 0) = 2, A(2, 2) = 7 and A(3, 4) = 125.
 Find [[http://projecteuler.net/project/images/p282formula3.gif]]A(n, n) and give your answer mod
 14^{8}.
 
-* COMMENT [[https://projecteuler.net/problem%3D283][Problem 283: Integer sided triangles for which the
-area/perimeter ratio is integral]]
+* COMMENT [[https://projecteuler.net/problem%3D283][Problem 283: Integer sided triangles for which the area/perimeter ratio is integral]]
 
 
 Consider the triangle with sides 6, 8 and 10. It can be seen that the
@@ -10115,7 +10114,7 @@ Find ∑f(n) for 4 ≤ n ≤ 13.
 
 Let us define a /geometric triangle/ as an integer sided triangle with
 sides a ≤ b ≤ c so that its sides form a *geometric progression*, i.e.
-b^{2} = a · c . 
+b^{2} = a · c .
 
 An example of such a geometric triangle is the triangle with sides a =
 144, b = 156 and c = 169.
