--- a/project-euler.org
+++ b/project-euler.org
@@ -1117,6 +1117,48 @@
   triangle containing one-hundred rows; it cannot be solved by brute force, and
   requires a clever method! ;o)
 
+** Solution
+
+   First we need to make a triangle, preferably from a sequence, to simplify
+   how the input is given. So want to take one number, then two, but dropping
+   the previous, then three but dropping the three previous and so on. The
+   number of numbers we need to drop happens to be the triangular numbers
+   (which we examined in problem 12).
+
+   #+BEGIN_SRC clojure :exports source
+   (defn seq->triangle [rows nums]
+     (map (fn [n] (->> nums (drop (triangular n)) (take (inc n))))
+          (range 0 rows)))
+   #+END_SRC
+
+   We can write a recursive function that, given a triangle, that traverses the
+   triangle, and maximizes the path sum.
+
+   #+BEGIN_SRC clojure :exports source
+   (defn maximum-path-sum
+     ([triangle] (maximum-path-sum (vec (map vec triangle)) 0 0))
+     ([triangle i j]
+      (if (< j (count triangle))
+        (let [row (triangle j)
+              left (maximum-path-sum triangle i (inc j))
+              right (maximum-path-sum triangle (inc i) (inc j))]
+          (+ (row i) (max left right)))
+        0)))
+   #+END_SRC
+
+   As indicated in the problem description, this is not a viable solution for a
+   bigger triangle, but we'll save the optimization for problem 67.
+
+   #+BEGIN_SRC clojure
+   (let [rows 15
+         nums [75 95 64 17 47 82 18 35 87 10 20 4 82 47 65 19 1 23 75 3 34 88 2 77 73 7 63 67 99 65 4 28 6 16 70 92 41 41 26 56 83 40 80 70 33 41 48 72 33 47 32 37 16 94 29 53 71 44 65 25 43 91 52 97 51 14 70 11 33 28 77 73 17 78 39 68 17 57 91 71 52 38 17 14 91 43 58 50 27 29 48 63 66 4 68 89 53 67 30 73 16 69 87 40 31 4 62 98 27 23 9 70 98 73 93 38 53 60 4 23]
+         triangle (seq->triangle rows nums)]
+     (maximum-path-sum triangle))
+   #+END_SRC
+
+   #+RESULTS:
+   : 1074
+
 * COMMENT [[https://projecteuler.net/problem%3D19][Problem 19: Counting Sundays]]
 
 
