--- a/project-euler.org
+++ b/project-euler.org
@@ -2558,23 +2558,31 @@ Hence, by considering minimal solutions in /x/ for D ≤ 7, the largest
 Find the value of D ≤ 1000 in minimal solutions of /x/ for which the
 largest value of /x/ is obtained.
 
-* COMMENT [[https://projecteuler.net/problem%3D67][Problem 67: Maximum path sum II]]
+* [[https://projecteuler.net/problem%3D67][Problem 67: Maximum path sum II]]
 
 
-By starting at the top of the triangle below and moving to adjacent
-numbers on the row below, the maximum total from top to bottom is 23.
+  By starting at the top of the triangle below and moving to adjacent numbers
+  on the row below, the maximum total from top to bottom is 23.
 
-*3*\\
- *7* 4\\
- 2 *4* 6\\
- 8 5 *9* 3
+  #+BEGIN_CENTER
+  *3*\\
+  *7* 4\\
+  2 *4* 6\\
+  8 5 *9* 3
+  #+END_CENTER
 
-That is, 3 + 7 + 4 + 9 = 23.
+  That is, 3 + 7 + 4 + 9 = 23.
 
-Find the maximum total from top to bottom in
-[[project/resources/p067_triangle.txt][triangle.txt]] (right click and
-'Save Link/Target As...'), a 15K text file containing a triangle with
-one-hundred rows.
+  Find the maximum total from top to bottom in [[https://projecteuler.net/project/resources/p067_triangle.txt][triangle.txt]] (right click and
+  'Save Link/Target As...'), a 15K text file containing a triangle with
+  one-hundred rows.
+
+  *NOTE:* This is a much more difficult version of [[https://projecteuler.net/problem=18][Problem 18]]. It is not
+  possible to try every route to solve this problem, as there are 2^{99}
+  altogether! If you could check one trillion (10^{12}) routes every second it
+  would take over twenty billion years to check them all. There is an efficient
+  algorithm to solve it. ;o)
+
 
 *NOTE:* This is a much more difficult version of [[problem=18][Problem
 18]]. It is not possible to try every route to solve this problem, as
